syntax = "proto3";

package ping.proto;

option go_package = "github.com/jkrus/benchprotos/grpc/proto/pb";

message PingPongRequest {
  string pingMessage = 1;
}

message PingPongResponse {
  string result = 1;
}

service PingPong {
  rpc PingMessage (PingPongRequest) returns (PingPongResponse);
}